# evernote-to-obsidian

./: .gitignore  converter.py  notepad.py  pages_converter.py  pyproject.toml  shell.nix  utils.py
