[tool.poetry]
name = "evernote-to-obsidian"
version = "0.1.0"
description = ""
authors = ["KGrzeg <kupczykgrzeg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
html2text = "^2020.1.16"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
