[tool.poetry]
name = "evernote-to-obsidian"
version = "0.1.0"
description = ""
authors = ["KGrzeg <kupczykgrzeg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
html2text = "^2020.1.16"
beautifulsoup4 = "^4.10.0"
enml2html = {git = "https://github.com/KGrzeg/ENML_PY.git"}
pdfkit = "^0.6.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
